# lisa-sentinel-new

./: .env.example  .gitignore  DEMO.md  DEMORUN.md  Makefile  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py
app/db/: README.md  __init__.py  adapter.py  null_adapter.py
app/prompts/: README.md  memo_qa_system.txt  scenario_screening_system.txt  section_extraction_system.txt  section_extraction_user.txt
app/routes/: __init__.py  dev.py  documents.py  extraction.py  health.py  jobs.py  prompts.py  spa.py
app/services/: __init__.py  azure_auth.py  doc_intelligence.py  doc_store.py  embeddings.py  extraction.py  jobs.py  llm.py  parsers.py  prompt_manager.py  qa.py  scenario.py  schemas.py  section_presets.py  validation.py
app/utils/: __init__.py  logging.py  markdown.py  normalize.py
docs/: ARCHITECTURE.md  CONSTRAINTS.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  EXTRACTION_PIPELINE.md  FRONTEND_DESIGN.md  FUTURE_DB_INTEGRATION.md  README.md  TROUBLESHOOTING.md  UX_CONTRACT.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vitest.config.ts
prompts_for_agents/: ADD_FEATURE.md  ONBOARD_NEW_DEVELOPER.md  README.md  UPDATE_LLM.md  UPDATE_PARSING.md  UPDATE_UI.md
scripts/: check_environment.py  run_dev.sh
tests/: conftest.py  test_doc_store.py  test_health_v2.py  test_prompt_manager.py  test_section_presets.py  test_smoke_app_boots.py  test_smoke_imports.py  test_smoke_schemas.py
(+71 files in other folders)
